Fixed latex typo.

--- a/handout/biol.tex
+++ b/handout/biol.tex
@@ -84,7 +84,7 @@ head(DE_GOana_top_BP_up, 10)
 \end{lstlisting}
 \end{steps}
 
-Rather than looking at biological process (BP) let\’s now look at molecular function (MF) terms
+Rather than looking at biological process (BP) let's now look at molecular function (MF) terms
 
 \begin{steps}
 \begin{lstlisting}
